@@ -70,6 +70,8 @@ Core and Builtins
 Library
 -------
 
+- Fix GzipFile's handling of filenames given as bytes objects.
+
 - Issue #15101: Make pool finalizer avoid joining current thread.
 
 - Issue #15036: Mailbox no longer throws an error if a flush is done
